--- a/Todolist/style.css
+++ b/Todolist/style.css
@@ -39,13 +39,28 @@ form label{
     font-size: 1rem;
     font-weight: 700;
     width: auto;
+    background-color: black;
+    color: white;
+    border-radius: 0.3rem;
 }
 
 li{
+    width: 80%;
     margin: 1rem;
     padding: 0.5rem;
     border: 1px solid black;
     list-style-type: circle;
     font-weight: bold;
     text-transform: uppercase;
+}
+button{
+    font-size: 0.7rem;
+    font-weight: 800;
+    margin: 0.5rem;
+    padding: 0.3rem;
+    height: 30px;
+}
+ul{
+    display: flex;
+    align-items: center;
 }
